[tool.poetry]
name = "target-triplewhale"
version = "0.1.0"
description = "`target-triplewhale` is a Singer target for Triplewhale, built with the Meltano SDK for Singer Targets."
authors = ["hotglue"]
keywords = [
    "ELT",
    "triplewhale",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "^2.25.1"
hotglue-singer-sdk = "^1.0.11"

[build-system]
requires = ["poetry-core==1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-triplewhale = 'target_triplewhale.target:TargetTriplewhale.cli'
